Login form, private routes relates to https://github.com/Sp2000/colplus-backend/issues/173

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.login-form-wrapper {
+  max-width: 300px;
+}
+.login-form {
+  max-width: 300px;
+}
+.login-form-forgot {
+  float: right;
+}
+.login-form-button {
+  width: 100%;
+}
