--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,23 @@
 .login-form-button {
   width: 100%;
 }
+
+.ant-upload-select-picture-card i {
+  font-size: 32px;
+  color: #999;
+}
+
+.ant-upload-select-picture-card .ant-upload-text {
+  margin-top: 8px;
+  color: #666;
+}
+.ant-upload-list-picture-card .ant-upload-list-item {
+  float: left;
+  width: 200px;
+  height: 200px;
+  margin: 0 8px 8px 0;
+}
+.logo-uploader > .ant-upload {
+  width: 200px;
+  height: 200px;
+}
