--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+.ant-collapse > .ant-collapse-item > .ant-collapse-header {
+  line-height: 14px !important;
+}
