pruning json on saveChild and some formatting on taxon pages

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@ body {
 .ant-collapse > .ant-collapse-item > .ant-collapse-header {
   line-height: 14px !important;
 }
+
+.colplus-taxon-page-list tbody tr:last-child > td
+{
+   border-bottom: none !important
+}
