--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,16 @@ html, body, #root {
   transition: color .3s;
 }
 
+.react-resizable {
+  position: relative;
+}
+
+.react-resizable-handle {
+  position: absolute;
+  width: 10px;
+  height: 100%;
+  bottom: 0;
+  right: -5px;
+  cursor: col-resize;
+}
+
