--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,9 @@ html, body, #root {
   cursor: col-resize;
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
