--- a/src/App.css
+++ b/src/App.css
@@ -282,4 +282,27 @@ div.csl-entry {
   margin-bottom: 0.5em;
 }
 
+.code-box-title {
+  position: absolute;
+  top: -14px;
+  margin-left: 16px;
+  padding: 1px 8px;
+  color: #777;
+  background: #fff;
+  border-radius: 2px 2px 0 0;
+  -webkit-transition: background-color .4s;
+  transition: background-color .4s;
+}
+
+.code-box {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin: 0 0 16px;
+  border: 1px solid #ebedf0;
+  border-radius: 2px;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
 
