species estimates and closes #256

--- a/src/App.css
+++ b/src/App.css
@@ -305,4 +305,10 @@ div.csl-entry {
   transition: all .2s;
 }
 
+.editable-row .ant-form-explain {
+  position: absolute;
+  font-size: 12px;
+  margin-top: -4px;
+}
+
 
