--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ body,
   height: 64px;
   position: relative;
   line-height: 64px;
-  margin-left: -20px;
+  padding-left: 24px;
   transition: all 0.3s;
   background: #002140;
   overflow: hidden;
@@ -70,9 +70,9 @@ body,
   display: inline-block;
   vertical-align: middle;
   font-size: 20px;
-  margin: 0 0 0 12px;
+  margin: 0 0 0 8px;
   font-family: Myriad Pro, Helvetica Neue, Arial, Helvetica, sans-serif;
-  font-weight: 600;
+  font-weight: 400;
   color: white;
 }
 
