--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 
 .colplus-taxon-page-list  th, .colplus-taxon-page-list  td {
   padding: 5px 3px !important;
-  font-size: 12px
-
+  font-size: 12px;
+  border-bottom: none !important;
 }
 
