new logo from Javier and closes https://github.com/CatalogueOfLife/checklistbank/issues/1064

--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,9 @@ body,
   padding: 14px 0;
 }
 .logo {
-  height: 64px;
+  height: 90px;
   position: relative;
-  line-height: 64px;
-  padding-left: 14px;
+  margin-left: -4px;
   transition: all 0.3s;
   background: #002140;
   overflow: hidden;
